Fixed dropdowns appearing behind grid

--- a/index.css
+++ b/index.css
@@ -67,6 +67,7 @@ td{
     position: relative;
     width: 20px;
     height: 20px;
+    z-index: -1;
 }
 
 label {
@@ -131,7 +132,7 @@ input[type="number"]
   background-color: #f1f1f1;
   min-width: 600px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 2;
 }
 
 .dropdownTab label {
